<resources>
    <string name="app_name">code</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="show">Show</string>
    <string name="enter_text_to_be_saved">Enter text to be saved</string>
    <string name="steps">1. Save the value using Shared Prefs \n 2. Use migration to migrate \n 3. Use Data store to modify preferences</string>
    <string name="save_with_shared_preferences">Save with Shared Preferences</string>
    <string name="migrate_to_data_store">Migrate to Data Store</string>
    <string name="modify_with_data_store">Modify with Data Store</string>
    <string name="m_success">Migration Success</string>
    <string name="str_data_store">Data Store</string>
    <string name="str_shared_prefs">Shared Preferences</string>
    <string name="str_selection">Selection Screen</string>
</resources>