<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    tools:context=".view.sharedPreference.SharedPreferenceActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="@dimen/img_module_size"
        android:layout_height="@dimen/img_module_size"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/img_margin_module"
        android:layout_marginTop="@dimen/img_margin_module"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/android"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_spacing"
        android:hint="@string/enter_text_to_be_saved">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_spacing"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnShowId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show" />

    <TextView
        android:id="@+id/txtOutputId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_spacing"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>